force-app/main/default/objects/LLC_BI__Professional_Contact__c/fields/LLC_BI__Contract_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contract_Role__c</fullName>
    <description>This is a picklist field used to specify the role of the professional contact.</description>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant/CPA</fullName>
                <default>true</default>
                <label>Accountant/CPA</label>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Insurance Agent - Life</fullName>
            </value>
            <value>
                <fullName>Insurance Agent - Property/Business</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Title Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>