force-app/main/default/objects/LLC_BI__Professional_Contact__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This field is a master detail field that specifies the loan in which the professional contact is associated with.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Professional Contacts</relationshipLabel>
    <relationshipName>Professional_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>