force-app/main/default/objects/LLC_BI__Professional_Contact__c/fields/LLC_BI__Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Mobile_Phone__c</fullName>
    <description>This field is used to specify the mobile phone number of the professional contact</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>