force-app/main/default/objects/LLC_BI__Professional_Contact__c/fields/LLC_BI__Phone__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Phone__c</fullName>
    <description>this field is used to specify the Phone number of the professional contact</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>